Sun Apr 27 11:03:36 1997  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am: Check to make sure there are no accidental
	configure substitutions.

	* automake.in (handle_texinfo): Don't allow configure substitution
	on @MAKEINFO@ here.

	* automake.in (handle_yacc_lex_cxx): ._c and ._o files both depend
	on $(ANSI2KNR).

	* kr-extra.am (ansi2knr): Removed.
	(ansi2knr.o): Likewise.

	* automake.in (get_object_extension): Allow ansi2knr to be built
	from any directory.

Fri Apr 25 12:33:23 1997  Tom Tromey  <tromey@cygnus.com>

	* missing: Changed bison text.  From Ian Taylor.

	* m4/missing.m4: Redirect stdin of testee.  From Bill Fenner.

	* automake.in (output_yacc_build_rule): Generate rule to create .h
	file.
	(handle_footer): Generate unique, sorted list of suffixes.

	* automake.in (scan_one_configure_file): Recognize AC_PROG_AWK,
	_CPP, _CXCPP, _LN_S.  From Ralph Schleicher.

Mon Apr 21 12:35:57 1997  Ian Lance Taylor  <ian@cygnus.com>

	* automake.in (@config_fullnames): New array.
	(@config_names): New array, replacing $config_name.
	(@config_headers): New array, replacing $config_header.
	(get_object_extension): Handle multiple header files.
	(handle_tags, handle_merge_targets): Likewise.
	(scan_one_configure_file): Likewise.
	(handle_configure): Likewise.  Don't check for the configuration
	header file in AC_OUTPUT; it won't be there.
	* remake-hdr.am: Handle multiple header files.
	* clean-hdr.am: New file, broken out of remake-hdr.am.
	* m4/header.m4: Handle multiple header files.
	* Makefile.am (pkgdata_DATA): Add clean-hdr.am.

Wed Apr 16 00:05:47 1997  Tom Tromey  <tromey@cygnus.com>

	* texinfos.am (.texi.info, .texi, .texinfo.info, .info): Remove

	* automake.in (define_program_variable): Added `override' argument.
	(handle_texinfo): Pass override arg when defining MAKEINFO.
	(AC_MISSING_PROG): New constant.
	(scan_one_configure_file): Use it.

Tue Apr 15 12:12:28 1997  Tom Tromey  <tromey@cygnus.com>
