@@ -916,8 +916,12 @@ sub handle_yacc_lex_cxx
 				     ':', '$(ANSI2KNR)'));
 	# The ._c files also depend on ansi2knr.  We need both because
 	# some makes don't apply transitivity through implicit rules.
-	local (%de_ansi_sources);
-	grep (($de_ansi_sources{$_} = $_) =~ s/o$/c/, keys %de_ansi_objects);
+	local (%de_ansi_sources, $val, $x);
+	foreach $x (keys %de_ansi_objects)
+	{
+	    $x =~ s/o$/c/;
+	    $de_ansi_sources{$x} = 1;
+	}
 	&pretty_print_rule ('', '', ((sort keys %de_ansi_sources),
 				     ':', '$(ANSI2KNR)'));
     }
