@@ -1,5 +1,11 @@
 Sun Apr 27 11:03:36 1997  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (handle_yacc_lex_cxx): Correctly compute
+	de_ansi_sources.
+
+	* clean-kr.am (distclean-kr): Do nothing; ansi2knr is removed in
+	kr-extra.am.
+
 	* Makefile.am: Check to make sure there are no accidental
 	configure substitutions.
 
